--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -211,8 +211,8 @@
  <div id="ajax-ex3">
 <p>You must issue a T4A slip if you provide <strong>group term life insurance </strong>benefits and <strong>one </strong>of the following apply:</p>
 <ul>
-<li>Where the taxable amount is paid to a <strong>former employee, </strong>you <strong>always </strong>have to issue a T4A slip  </li>
-<li>Where the taxable amount is paid to a <strong>retired </strong>employee, the amount is the <strong>only </strong>income reported on the slip <strong>and</strong> the total is <strong>more than $50 </strong>in the calendar year   </li>
+<li>The taxable amount is paid to a <strong>former employee</li>
+<li>The taxable amount is paid to a <strong>retired </strong>employee, the amount is the <strong>only </strong>income reported on the slip <strong>and</strong> the total is <strong>more than $50 </strong>in the calendar year   </li>
 </ul>
 </div>
 </dd>
@@ -500,11 +500,11 @@
 <dd><p><strong>Do not</strong> report direct transfers of <abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr> lump-sum payments to an <abbr title="Registered retirement savings plan">RRSP</abbr>, an <abbr title="Simplified pension plan">SPP</abbr>, a <abbr title="Pooled registered pension plan">PRPP</abbr>, a <abbr title="Registered retirement income fund">RRIF</abbr>, or other <abbr title="Registered pension plan">RPP</abbr>/<abbr title="Deferred profit sharing plan">DPSP</abbr> that are transferred according to subsections&nbsp;147.3(1) to (8) or subsection 147(19) using box 018, use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t2151.html">Form T2151 Direct Transfer of a Single Amount Under Subsection 147(19) or Section 147.3</a>.</p>
 </dd>
 
-<dt>Amounts not eligible for transfer from a <abbr title="Registered pension plan">RPP</abbr> and <abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
+<dt>Amounts not eligible for transfer from an <abbr title="Registered pension plan">RPP</abbr> and <abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
 <dd><p>Report amounts you transferred that are greater than the amounts allowed under subsections 147.3(1) to (8) or 147(19) of the Income Tax Act that are considered income in the year they are transferred using box 018. These amounts are considered income in the year they are transferred.</p>
 <p>Report single payments you made that you <strong>cannot transfer</strong> :</p>
 <ul>
-<li>from a <abbr title="Registered pension plan">RPP</abbr> using box 018 <strong>and</strong> <a href="#cd108">code 108</a></li>
+<li>from an <abbr title="Registered pension plan">RPP</abbr> using box 018 <strong>and</strong> <a href="#cd108">code 108</a></li>
 <li>from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using box 018 <strong>and</strong> <a href="#cd180">code 180</a></li> 
 <li>that is not required to be reported elsewhere using box 018 <strong>and</strong> <a href="#cd158">code 158</a></li>
 </ul>
@@ -689,7 +689,7 @@
 </li>
 <li class="code-num">
  <details> <summary>Code 034 – Pension adjustment </summary> 
-  <p  id="cd034">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has  under a <abbr title="registered pension plan">RPP</abbr> during a period of leave or reduced services using code 034 if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>).</p>
+  <p  id="cd034">Report the amount (in dollars only) of a pension adjustment (<abbr title="pension adjustment">PA</abbr>) an employee has  under an <abbr title="registered pension plan">RPP</abbr> during a period of leave or reduced services using code 034 if you are the plan administrator for a multi-employer plan (<abbr title="multi-employer plan">MEP</abbr>).</p>
 
 <p>You must also enter the plan registration number using <a href="#cd036">code 036</a>.</p>
  <h4>Specific situations </h4>
@@ -985,7 +985,7 @@
  <details>  <summary>Code 135 – Recipient-paid premiums for private health services plans  </summary> 
  <p  id="cd135">Report the premiums that the recipient paid to a private health services plans of a <strong>former or retired</strong> employee using code 135.</p>
 <p>The use of code 135 is optional. If you do not use this code, the CRA may ask the recipient to provide supporting documents.</p>
-<p>This is considered a qualifying medical expense which the recipient may claim medical expense tax credit on their income tax and benefit return.</p>
+<p>This is considered a qualifying medical expense which the recipient may claim as a medical expense tax credit on their income tax and benefit return.</p>
 <p>Learn more: <a href="/cra-arc/payroll/calculate/benefit/insurance.html#phsp">Insurance plans</a></p>	
  </details> 
 </li>
@@ -1063,7 +1063,7 @@
 <dt><abbr title="Registered pension plan">RPP</abbr> or <abbr title="Deferred profit sharing plan">DPSP</abbr></dt>
 <dd><p><strong>Do not</strong> report payments you made that you <strong>cannot transfer</strong> :</p>
 <ul>
-<li>from a <abbr title="Registered pension plan">RPP</abbr> using code 158, use <a href="#cd108">code 108</a></li>
+<li>from an <abbr title="Registered pension plan">RPP</abbr> using code 158, use <a href="#cd108">code 108</a></li>
 <li>from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 158, use <a href="#cd180">code 180</a></li> 
 </ul>
 </dd>
@@ -1079,7 +1079,7 @@
 
 <li class="code-num">
  <details>  <summary>Code 180 – Lump-sum payments from a deferred profit-sharing plan (DPSP) that you cannot transfer </summary> 
- <p id="cd180">Report lump-sum payments you made that you <strong>cannot transfer</strong> from an <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
+ <p id="cd180">Report lump-sum payments you made that you <strong>cannot transfer</strong> from a <abbr title="Deferred profit sharing plan">DPSP</abbr> using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 <p>You also have to report the amount of the payments if you allocated an amount in a <strong>previous year</strong> and you made the payment in the current year using code 180 <strong>and</strong> <a href="#bx018">box 018</a>.</p>
 
 <h4>Specific situations </h4>
@@ -1090,7 +1090,7 @@
 <dt><abbr title="Registered pension plan">RPP</abbr> and other payments</dt>
 <dd><p><strong>Do not</strong> report payments you made that you <strong>cannot transfer</strong> :</p>
 <ul>
-<li>from a <abbr title="Registered pension plan">RPP</abbr> using code 180, use <a href="#cd108">code 108</a></li>
+<li>from an <abbr title="Registered pension plan">RPP</abbr> using code 180, use <a href="#cd108">code 108</a></li>
 <li>that is not required to be reported elsewhere using code 180, use <a href="#cd158">code 158</a></li>
 </ul>
 </dd>
@@ -1143,7 +1143,7 @@
 
 <li class="code-num">
  <details > <summary>Code 205 – One-time payment for older seniors </summary> 
- <p id="cd205">Report the one-time supplementary OAS payment made to older seniors made in 2021 or 2022 using code 205.</p>
+ <p id="cd205">Report the one-time supplementary OAS payment made to older seniors in 2021 or 2022 using code 205.</p>
 <p><strong>Do not</strong> report this payment using the T4A(OAS) slip.</p> 
 <p>Learn more from Employment and Social Development Canada: <a href="https://www.canada.ca/en/services/benefits/publicpensions/cpp/old-age-security/one-time-payment-older-seniors.html"> One-time payment for older seniors</a></p>
    </details> 
