--- a/payroll/file/t4slip.html
+++ b/payroll/file/t4slip.html
@@ -597,7 +597,7 @@
 
 <p>Depending on the type of payment you made, you may also need to report these amounts in "Other information" using specific codes. </p>
  <details> <summary>Type of payments included in employment income </summary>
-<p>Generally, you have to report using box 14 from:</p>
+<p>Generally, you have to report payments from the following using box 14:</p>
     <p>  <div data-ajax-replace="/cra-arc/payroll/calculate/when/learnit.html#ajax-deduct"></div></p>
            </details>
        
@@ -643,7 +643,7 @@
 </dd>
 
 <dt>Board and lodging </dt>
-<dd><p id="bx_14_cd_30">Report the total amount of the board and lodging benefit paid your employee using box 14 <strong>and</strong> <a href="#cd_30">code 30</a>. </p>
+<dd><p id="bx_14_cd_30">Report the total amount of the board and lodging benefit paid to your employee using box 14 <strong>and</strong> <a href="#cd_30">code 30</a>. </p>
 <p><strong>Do not </strong>report using box 14 if you paid lodging and housing benefit at <strong>special work sites</strong>, use <a href="#cd_31">code 31</a> for the tax-exempt board, lodging and housing at the special work sites. </p>
 </dd>
 
@@ -1105,7 +1105,7 @@
 <li class="code-num mrgn-lft-md">  <details><summary >Box 20 – RPP contributions </summary>
 <p id="bx_20">Report the amount, including instalment interest (for example: interest charged to buy back pensionable service), your employee contributed to a registered pension plan (<abbr title="Registered pension plan">RPP</abbr>) using box 20. </p>
 
- <h4>Specific situation</h4>
+ <h4>Specific situations</h4>
 <dl class="dl-horizontal">
 <dt>Employee did not contribute</dt>
 <dd><strong>Do not</strong> report an amount if the employee <strong>did not</strong> contribute to a plan using box 20.</dd>
@@ -1131,8 +1131,8 @@
 <p>You <strong>have</strong> to attach a letter informing the employee of the amounts you reported if the amount in box 20 includes <abbr title="registered pension plan">RPP</abbr> and <abbr title="Retirement compensation arrangement">RCA</abbr> contributions.</p>
 </dd>
 
-<dt><abbr title="Registered pension plan">RPP</abbr> past-service contributions </dt>
-<dd><p>Report the amount your employee contributed to an <abbr title="Registered pension plan">RPP</abbr> if the contributions included current <strong>and</strong> past-service contributions for: </p>
+<dt><abbr title="Registered pension plan">RPP</abbr> past service contributions </dt>
+<dd><p>Report the amount your employee contributed to an <abbr title="Registered pension plan">RPP</abbr> if the contributions included current <strong>and</strong> past service contributions for: </p>
 <ul>
             <li>1989 or earlier years while a contributor, using box 20 <strong>and</strong> <a href="#cd_74">code 74</a></li>
             <li>1989 or earlier years while <strong>not</strong> a contributor, using box 20 <strong>and</strong> <a href="#cd_75">code 75</a></li>
@@ -1423,7 +1423,7 @@
 <li class="cnjnctn-col">You previously paid your employee the workers' compensation amount and you reported it as employment income on their T4 slip</li>
 <li class="cnjnctn-col">You were reimbursed by the workers' compensation board (WCB) for the worker's compensation amount you paid to your employee </li>
 </ul>
-<p> This allows your employee to claim a deduction as other employment expenses on their income tax and benefit returns. </p>
+<p> This allows your employees to claim a deduction as other employment expenses on their income tax and benefit returns. </p>
 <p><strong>Do not </strong>report this amount in box 14.</p>    
     <p>Learn more: <a href="/cra-arc/payroll/calculate/payment/wcb.html">Payments related to workers' compensation claims</a></p>
          
@@ -1479,7 +1479,7 @@
 			</li>
 
 <li class="code-num mrgn-lft-md"><details> <summary>Code 83 – Barbers or hairdressers – Gross income </summary> 
-<p id="cd_83">Report the gross income you paid to a <a href="#barbers" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed barbers or hairdressers&nbsp;<span class="far fa-question-circle"></span></a> using code 83. If you report an amount in code 83, you have to enter the employment code 13 using <a href="#bx_29_cd_13">box 29</a>.</p>
+<p id="cd_83">Report the gross income you paid to <a href="#barbers" aria-controls="centred-popup" class="wb-lbx" role="button">self-employed barbers or hairdressers&nbsp;<span class="far fa-question-circle"></span></a> using code 83. If you report an amount in code 83, you have to enter the employment code 13 using <a href="#bx_29_cd_13">box 29</a>.</p>
 <p><strong>Do not </strong>report this amount in box 14.</p>  
 
 
