--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -211,7 +211,7 @@
  <div id="ajax-ex3">
 <p>You must issue a T4A slip if you provide <strong>group term life insurance </strong>benefits and <strong>one </strong>of the following apply:</p>
 <ul>
-<li>The taxable amount is paid to a <strong>former employee</li>
+<li>The taxable amount is paid to a <strong>former employee</strong></li>
 <li>The taxable amount is paid to a <strong>retired </strong>employee, the amount is the <strong>only </strong>income reported on the slip <strong>and</strong> the total is <strong>more than $50 </strong>in the calendar year   </li>
 </ul>
 </div>
