--- a/payroll/index.html
+++ b/payroll/index.html
@@ -60,6 +60,12 @@
 
     <div class="col-lg-4 col-md-6">
       <section>
+        <h3><a href="guidance/index.html">Determine the employment status: Employee, self-employed or incorporated employee</a></h3>
+        <p>Determine if a worker is an employee, self-employed or an incorporated employee, including their tax obligations under specific legislation such as the Canada Pension Plan, Employment Insurance Act and the Income Tax Act.</p>
+      </section>
+    </div>
+<div class="col-lg-4 col-md-6">
+      <section>
         <h3><a href="register/index.html">Open or manage an account</a></h3>
         <p>Determine if you need to open a payroll account and make payroll deductions depending on your status (or the worker's employment status), and the methods to use to open, modify and close an account </p>
       </section>
