--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -50,7 +50,7 @@
                 href: "https://www.canada.ca/en/services/taxes.html"
               },{
                 title: "Payroll",
-                href: "../../index.html"
+                href: "../index.html"
              
              },{
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
