--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -46,7 +46,7 @@
                 href: "https://www.canada.ca/en/services/taxes.html"
               },{
                 title: "Payroll",
-                href: "../../index.html"
+                href: "../index.html"
               },{
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
                 href: "index.html"
