--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -50,10 +50,10 @@
                 href: "https://www.canada.ca/en/services/taxes.html"
               },{
                 title: "Payroll",
-                href: "../../../index.html"
+                href: "../../index.html"
             },{
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
-                href: "../../index.html"
+                href: "../index.html"
              },{
                 title: "Understand the tax obligations",
                 href: "index.html"
