--- a/payroll/guidance/tax-obligations-self.html
+++ b/payroll/guidance/tax-obligations-self.html
@@ -48,13 +48,13 @@
               },{
                 title: "Taxes",
                 href: "https://www.canada.ca/en/services/taxes.html"
-              },{
+               },{
                 title: "Payroll",
-                href: "../../../index.html"
+                href: "https://test.canada.ca/cra-arc/payroll/index.html"
              
              },{
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
-                href: "../../index.html"
+                href: "https://test.canada.ca/cra-arc/payroll/guidance/index.html"
              },{
                 title: "Understand the tax obligations",
                 href: "index.html"
