--- a/payroll/index.html
+++ b/payroll/index.html
@@ -50,7 +50,7 @@
          });
       </script>
       <main role="main" property="mainContentOfPage" class="container experimental">
-<h1 property="name" id="wb-cont">Payroll</span></h1>
+<h1 property="name" id="wb-cont">Payroll</h1>
 <p>Calculate deductions and contributions on employee pay, open a payroll account to send deductions, report income deductions.</p>
 
 
@@ -155,7 +155,7 @@
             showShare: true
             });
          </script>
-      </main>
+</div>   </section>   </main>
       <div id="def-footer">
       </div>
       <!-- Write closure template -->
