--- a/payroll/index.html
+++ b/payroll/index.html
@@ -60,8 +60,8 @@
 
     <div class="col-lg-4 col-md-6">
       <section>
-        <h3><span class="label label-danger">New - Currently in development with CVB</span> <a href="guidance/index.html">Determine the employment status: Employee, self-employed or incorporated employee</a></h3>
-        <p>Determine if a worker is an employee, self-employed or an incorporated employee, including their tax obligations under specific legislation such as the Canada Pension Plan, Employment Insurance Act and the Income Tax Act.</p>
+        <h3><a href="guidance/index.html">Determine the employment status</a></h3>
+        <p><span class="label label-danger">New - Currently in development with CVB</span> Determine the employment status: if a worker is an employee, self-employed or an incorporated employee, including their tax obligations under specific legislation such as the Canada Pension Plan, Employment Insurance Act and the Income Tax Act.</p>
       </section>
     </div>
 <div class="col-lg-4 col-md-6">
