--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -49,10 +49,10 @@
                 href: "https://test.canada.ca/cra-arc/payroll/index.html"
               },{
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
-                href: "../index.html"
+                href: "https://test.canada.ca/cra-arc/payroll/guidance/index.html"
               },{
                 title: "Determine if the worker is an employee or self-employed",
-                href: "index.html"
+                href: "https://test.canada.ca/cra-arc/payroll/guidance/factors.html"
               }
                            ],
               search: true,
