--- a/payroll/guidance/tax-obligations-employee.html
+++ b/payroll/guidance/tax-obligations-employee.html
@@ -50,13 +50,13 @@
                 href: "https://www.canada.ca/en/services/taxes.html"
               },{
                 title: "Payroll",
-                href: "../../index.html"
+                href: "https://test.canada.ca/cra-arc/payroll/index.html"
             },{
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
-                href: "../index.html"
+                href: "https://test.canada.ca/cra-arc/payroll/guidance/index.html"
              },{
                 title: "Understand the tax obligations",
-                href: "index.html"
+                href: "https://test.canada.ca/cra-arc/payroll/guidance/after.html"
               }
               ],
               search: true,
