--- a/payroll/guidance/tax-obligations-psb.html
+++ b/payroll/guidance/tax-obligations-psb.html
@@ -48,16 +48,15 @@
               },{
                 title: "Taxes",
                 href: "https://www.canada.ca/en/services/taxes.html"
-              },{
+               },{
                 title: "Payroll",
                 href: "https://test.canada.ca/cra-arc/payroll/index.html"
-             
-             },{
+            },{
                 title: "Determine the employment status: Employee, self-employed or incorporated employee",
                 href: "https://test.canada.ca/cra-arc/payroll/guidance/index.html"
              },{
                 title: "Understand the tax obligations",
-                href: "index.html"
+                href: "https://test.canada.ca/cra-arc/payroll/guidance/after.html"
               }
               ],
               search: true,
