--- a/payroll/calculate/benefit/index.html
+++ b/payroll/calculate/benefit/index.html
@@ -274,7 +274,7 @@
   	
 			    			
 			   <tr>
-                           <td> <a href="loans.html">Loans and employee debt</a> <span class="label label-warning">With ABSB</span></td>
+                           <td> <a href="loans.html">Loans and employee debt</a> <span class="label label-success">Live</span></td>
                            <td>Work-related benefits</td>
                         </tr> 
 			      <tr>
