--- a/taxpayer-rights/index.html
+++ b/taxpayer-rights/index.html
@@ -58,7 +58,7 @@
             <link href="https://cra-arc.gc.ca/wet-boew/css/custom/theme-topic.css" rel="stylesheet">
             <!--Need to move this CSS sheet to cra-arc.gc.ca //-->
             <link href="https://design.canada.ca/css/beta/social-media.css" rel="stylesheet">
-            <div class="provisional bg-cover row mrgn-bttm-lg" data-bgimg="banner3.JPG">
+            <div class="provisional bg-cover row mrgn-bttm-lg" data-bgimg="banner-new.jpg">
                <div class="container p-0 p-sm-3">
                   <div class="well header-rwd brdr-0 brdr-rds-0  mrgn-tp-lg">
                      <h1 property="name" id="wb-cont" class="gc-thickline">Taxpayer Bill of Rights</h1>
