--- a/taxpayer-rights/index-f.html
+++ b/taxpayer-rights/index-f.html
@@ -57,7 +57,7 @@
             <link href="https://cra-arc.gc.ca/wet-boew/css/custom/theme-topic.css" rel="stylesheet">
             <!--Need to move this CSS sheet to cra-arc.gc.ca //-->
             <link href="https://design.canada.ca/css/beta/social-media.css" rel="stylesheet">
-            <div class="provisional bg-cover row mrgn-bttm-lg" data-bgimg="https://media.gettyimages.com/id/1291584234/photo/100-unique-faces-collage.jpg?s=1024x1024&w=gi&k=20&c=WZ1wYUt5KMq0SMwigOS0RM9Ij99yditiPbNg-iksWXU=">
+            <div class="provisional bg-cover row mrgn-bttm-lg" data-bgimg="banner-new.jpg">
                <div class="container p-0 p-sm-3">
                   <div class="well header-rwd brdr-0 brdr-rds-0  mrgn-tp-lg">
                      <h1 property="name" id="wb-cont" class="gc-thickline mrgn-tp-0">Charte des droits du contribuable</h1>
