--- a/payroll/calculate/when/learncpp.html
+++ b/payroll/calculate/when/learncpp.html
@@ -297,7 +297,7 @@
    
 <h2 id="h_10">What is the CPP enhancement</h2>
 <p>Before January 1, 2019, employees were making a contribution of 4.95% on their pensionable earnings up to their annual maximum pensionable earnings (first ceiling), with employers making an equal contribution. These are the <strong>base contributions </strong>to the CPP. </p>
-<p>From 2019 to 2023, the contribution rate for employees is increased gradually from 4.95% to 5.95%. These are the base contributions (4.95%) and the <strong>first additional contribution</strong> to the CPP (1%).</p>
+<p>From 2019 to 2023, the contribution rate for employees was increased gradually from 4.95% to 5.95%. These are the base contributions (4.95%) and the <strong>first additional contribution</strong> to the CPP (1%).</p>
 <p>Beginning in 2024, a year's additional maximum pensionable earnings (second higher ceiling) is introduced. A <strong>second additional CPP contribution (CPP2)</strong> is made on these earnings, beginning at the first earnings ceiling and going up to the second earnings ceiling. </p>
 
 
