--- a/payroll/calculate/when/learnit.html
+++ b/payroll/calculate/when/learnit.html
@@ -130,7 +130,7 @@
             </ul>
 
 <h2 id="h_1">What are taxable earnings</h2>
-<p>As an employer or a payer, you are required to deduct federal and provincial or territorial income tax from remuneration and other income. </p>
+<p>As an employer or a payer, you are required to deduct federal and provincial or territorial income tax from remuneration and other income that you pay. </p>
 <p>You need to determine which provincial or territorial income tax you are required to deduct based on the <strong>province of employment of the employee</strong>. </p>
 <p>Learn more: <a href="/cra-arc/payroll/employee/poe.html">Determine the province of employment (POE)</a></p>
 
@@ -142,7 +142,7 @@
 <li><span class="fas fa-check fa-li text-success"></span> Honorariums from employment or office, director's fees, management fees, fees paid to board or committee members and executor's, liquidator's, or administrator's fees earned to administer an estate (as long as the executor, liquidator, or administrator <strong>does not act in this capacity </strong>in the regular course of business). </li>
 <li><span class="fas fa-check fa-li text-success"></span> Bonuses/retroactive pay increases and vacation pay. </li>
 <li><span class="fas fa-check fa-li text-success"></span> Pensions, wages in lieu of termination notice, retiring allowances (severance pay), certain amounts received for wrongful dismissal and death benefits. </li>
-<li><span class="fas fa-check fa-li text-success"></span> Remuneration paid while the employee is on vacation, furlough, sabbatical, or sick leave, or for lost-time pay from a union, vacation pay, benefit paid under a supplementary unemployment benefit plan to a trustee for payment of periodic amounts to employees who are laid off for any temporary or indefinite period  (such as employer paid maternity and parental top-up amounts) and payments for sick leave credits and accrued vacation. </li>
+<li><span class="fas fa-check fa-li text-success"></span> Remuneration paid while the employee is on vacation, furlough, sabbatical, or sick leave, or for lost-time pay from a union, vacation pay, benefits paid under a supplementary unemployment benefit plan to a trustee for payment of periodic amounts to employees who are laid off for any temporary or indefinite period  (such as employer paid maternity and parental top-up amounts) and payments for sick leave credits and accrued vacation. </li>
 <li><span class="fas fa-check fa-li text-success"></span> Wage-loss replacement plans benefits. </li>
 <li><span class="fas fa-check fa-li text-success"></span> Tips and gratuities that are <strong>controlled</strong> by you and received from the performance of services are considered income from employment. </li>
 <li><span class="fas fa-check fa-li text-success"></span> <strong>Additional </strong>amounts that <strong>you pay </strong>while participating in a job creation project that Employment and Social Development Canada (ESDC) has approved. </li>
