--- a/payroll/calculate/corrections/index.html
+++ b/payroll/calculate/corrections/index.html
@@ -159,8 +159,8 @@
 <p>You can send the application with your information return or send it later within the following time limits:</p>
 
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li class="cnjnctn-col"><h5 class="text-muted">CPP contributions</h5> <p>No later than <strong>4 years </strong>from the end of the year in which the overpayment occured </p></li>
-<li class="cnjnctn-col"><h5 class="text-muted">EI premiums</h5><p>No later than <strong>3 years </strong>from the end of the year in which the overpayment occured </p></li>
+<li class="cnjnctn-col"><h5 class="text-muted">CPP contributions</h5> <p>No later than <strong>4 years </strong>from the end of the year in which the overpayment occurred </p></li>
+<li class="cnjnctn-col"><h5 class="text-muted">EI premiums</h5><p>No later than <strong>3 years </strong>from the end of the year in which the overpayment occurred </p></li>
 </ul>
 
 </details>
