--- a/payroll/guidance/factors-quebec.html
+++ b/payroll/guidance/factors-quebec.html
@@ -102,6 +102,14 @@
 
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an employee or self-employed: Contract formed in the province of Quebec</h1>
+  <p class="pull-left">Applies to: </p>
+
+<ul class="list-inline mrgn-bttm-md">
+
+<li class="mrgn-rght-md"><img src="../images/flag-qc.png" class="mrgn-rght-sm" alt=""> QC</li>
+
+
+</ul>   
 <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
