--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -63,7 +63,8 @@
 <main role="main" property="mainContentOfPage" class="container">
   <nav class="provisional gc-subway">
     <h1 id="gc-document-nav">Determine the employment status: Employee, self-employed or incorporated employee</h1>
-    <ul>
+
+   <ul>
       <li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a> <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Overview</a></li>
       <li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a>
         <ul class="noline">
@@ -76,6 +77,25 @@
     </ul>
   </nav>
   <h1 property="name" id="wb-cont" class="gc-thickline">Determine if the worker is an employee or self-employed: Contract formed in a province or territory not in Quebec</h1>
+  <p class="pull-left">Applies to: </p>
+
+<ul class="list-inline mrgn-bttm-md">
+
+<li class="mrgn-rght-md"><img src="../images/flag-ab.png" class="mrgn-rght-sm" alt=""> AB</li>
+<li class="mrgn-rght-md"><img src="../images/flag-bc.png" class="mrgn-rght-sm" alt=""> BC</li>
+<li class="mrgn-rght-md"><img src="../images/flag-mb.png" class="mrgn-rght-sm" alt="">MB</li>
+<li class="mrgn-rght-md"><img src="../images/flag-nb.png" class="mrgn-rght-sm" alt=""> NB</li>
+<li class="mrgn-rght-md"><img src="../images/flag-nl.png" class="mrgn-rght-sm" alt=""> NL</li>
+<li class="mrgn-rght-md"><img src="../images/flag-nt.png" class="mrgn-rght-sm" alt=""> NT</li>
+<li class="mrgn-rght-md"><img src="../images/flag-ns.png" class="mrgn-rght-sm" alt=""> NS</li>
+<li class="mrgn-rght-md"><img src="../images/flag-nu.png" class="mrgn-rght-sm" alt=""> NU</li>
+<li class="mrgn-rght-md"><img src="../images/flag-on.png" class="mrgn-rght-sm" alt=""> ON</li>
+<li class="mrgn-rght-md"><img src="../images/flag-pe.png" class="mrgn-rght-sm" alt=""> PE</li>
+<li class="mrgn-rght-md"><img src="../images/flag-sk.png" class="mrgn-rght-sm" alt=""> SK</li>
+<li class="mrgn-rght-md"><img src="../images/flag-yt.png" class="mrgn-rght-sm" alt=""> YT</li>
+
+</ul>   
+
   <div class="alert alert-info">
     <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
   </div>
