--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready-1.html
@@ -188,7 +188,7 @@
   <label for="taxyearend">Enter your tax year end to get your dates<span class="datepicker-format"> (<abbr title="Four digits year, dash, two digits month, dash, two digits day">YYYY-MM-DD</abbr>)</span></label>
   <input class="form-control" type="date" id="enddate2" name="enddate2" min="2021-12-01" max="2023-12-31" value="">
 
-      <button class="btn btn-primary btn-lg mrgn-bttm-md" type="button" id="calculate2" data-wb-doaction="[ 
+      <button class="btn btn-primary btn-lg mrgn-bttm-md pull-right" type="button" id="calculate2" data-wb-doaction="[ 
     { &quot;action&quot;: &quot;removeClass&quot;, &quot;class&quot;: &quot;hidden&quot;, &quot;source&quot;: &quot;#corps1&quot; },
     { &quot;action&quot;: &quot;loadJSON&quot;, &quot;source&quot;: &quot;#smallLoader2&quot;, &quot;url&quot;: &quot;doaction-dates-en.json&quot; },
     { &quot;action&quot;: &quot;withInput&quot;, &quot;srcInput&quot;: &quot;#enddate2&quot;, &quot;actions&quot;: [
