--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -110,7 +110,7 @@
 
  <p>Unless the <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> states differently, the factors are different if the contract is formed:</p>
 
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col">
 <ul class="fa-ul mrgn-bttm-lg">
 <li><span class="fas fa-check fa-li text-success"></span> In a province or a territory other than Quebec  </li>
