--- a/payroll/guidance/after.html
+++ b/payroll/guidance/after.html
@@ -68,8 +68,8 @@
   <h1 id="gc-document-nav">Determine the employment status: Employee, self-employed or incorporated employee</h1>
   <ul>
 
-<li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a>
-      <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Overview</a></li>
+<li><a href="overview.html" class="hidden-xs hidden-sm">Get ready to determine the employment status</a>
+      <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
      
 
 <li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
