--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -72,7 +72,7 @@
   <h2>Sections</h2>
 
 <dl>
-  <dt>   <a href="overview.html">Overview</a>  </dt>
+  <dt>   <a href="overview.html">Get ready to determine the employment status</a>  </dt>
   <dd>Information on the type of employment status for tax purposes, what is considered a valid contract, including what to do if you are not sure about the worker classification </dd>
 
   <dt>    <a href="factors.html">Determine if the worker is an employee or self-employed</a>  </dt>
