--- a/payroll/guidance/factors-federal.html
+++ b/payroll/guidance/factors-federal.html
@@ -65,7 +65,7 @@
     <h1 id="gc-document-nav">Determine the employment status: Employee, self-employed or incorporated employee</h1>
 
    <ul>
-      <li><a href="overview.html" class="hidden-xs hidden-sm">Overview</a> <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Overview</a></li>
+      <li><a href="overview.html" class="hidden-xs hidden-sm">Get ready to determine the employment status</a> <a href="overview.html#gc-document-nav" class="visible-xs visible-sm">Get ready to determine the employment status</a></li>
       <li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a> <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an employee or self-employed</a>
         <ul class="noline">
           <li> <a href="factors-federal.html" class="active" aria-current="page">Contract formed in a province or territory not in Quebec</a></li>
