--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Overview - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
+         <title>Get ready to determine the employment status - Determine the employment status: Employee, self-employed or incorporated employee - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -69,7 +69,7 @@
   <h1 id="gc-document-nav">Determine the employment status: Employee, self-employed or incorporated employee</h1>
   <ul>
 
- <li>	 <a href="overview.html" class="active" aria-current="page">Overview</a>	</li>
+ <li>	 <a href="overview.html" class="active" aria-current="page">Get ready to determine the employment status</a>	</li>
      
 
 <li><a href="factors.html" class="hidden-xs hidden-sm">Determine if the worker is an employee or self-employed</a>
@@ -89,7 +89,7 @@
 
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Overview</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Get ready to determine the employment status</h1>
  <div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
  </div>
