--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready-1.html
@@ -184,7 +184,7 @@
 <dd>
     <p>Your SR&amp;ED  reporting deadline is 12&nbsp;months after your T2 Corporation Income Tax Return is due.</p>
 	
-<div class="form-group">
+<div class="input-group">
   <label for="taxyearend">Enter your tax year end to get your dates<span class="datepicker-format"> (<abbr title="Four digits year, dash, two digits month, dash, two digits day">YYYY-MM-DD</abbr>)</span></label>
   <input class="form-control" type="date" id="enddate2" name="enddate2" min="2021-12-01" max="2023-12-31" value="">
 <span class="input-group-btn">
