--- a/sred/scientific-research-experimental-development-tax-incentive-program/get-ready-1.html
+++ b/sred/scientific-research-experimental-development-tax-incentive-program/get-ready-1.html
@@ -220,7 +220,7 @@
     &quot;wait&quot;: true
     }"></div>
     
-    <div tabindex="0" id="corps1" class="mrgn-tp-lg mrgn-bttm-md">
+    <div tabindex="0" id="corps1" class="hidden mrgn-tp-lg mrgn-bttm-md">
       <p class="text-muted small mrgn-bttm-0">Based on your selection</p>
       <h4 class="mrgn-tp-0">Your dates are:</h4> 
       <ul class="fa-ul">
@@ -275,7 +275,7 @@
     }"></div>
     
 	
-    <div tabindex="0" id="trusts1" class="alert alert-info provisional mrgn-tp-lg mrgn-bttm-md">
+    <div tabindex="0" id="trusts1" class="alert alert-info provisional hidden mrgn-tp-lg mrgn-bttm-md">
       <p class="text-muted small">Based on your selection</p>
       <h4 class="mrgn-tp-0">Your dates are:</h4>
 <div>
