--- a/payroll/file/t4aslip.html
+++ b/payroll/file/t4aslip.html
@@ -386,7 +386,8 @@
 
 <li class="code-num">  	
  <details><summary>Box 015 – Payer-offered dental benefits <span class="label label-warning">Slips filed for calendar year 2023 and after</span> </summary>
-<p id="bx015">For T4A slips filed for calendar year 2023 and after, it is <strong> mandatory</strong> to enter the appropriate code using box 015 to indicate whether the recipient or any of their family members were <strong>eligible on December 31 of that year to access</strong> any dental care insurance, or coverage of dental services of any kind, that you offered if you <strong>reported an amount for pension or superannuation using <a href="#bx016">box 016</a>.</p>
+<p id="bx015">For T4A slips filed for calendar year 2023 and after, it is <strong> mandatory</strong> to enter the appropriate code using box 015 to indicate whether the recipient or any of their family members were <strong>eligible on December 31 of that year to access</strong> any dental care insurance, or coverage of dental services of any kind, that you offered if you reported an amount for pension or superannuation using <a href="#bx016">box 016</a>.</p>
+<p> Otherwise, leave it blank.</p>
    
 <div class="table-responsive section">
         <table class="table small table-striped table-condensed">
