--- a/payroll/file/t4arcaslip.html
+++ b/payroll/file/t4arcaslip.html
@@ -157,7 +157,7 @@
 			<div class="row">
 			 <div class="row">
 			 <div class="col-sm-7">
-			 <p>A T4A-RCA slip identifies the amounts distributed during a calendar year to a person from a retirement compensation arrangement (RCA), as a beneficiary of the RCA or if they sold an interest in it. The slip also shows the income tax that was deducted from the amounts distributed to a person.</p>
+			 <p>A T4A-RCA slip identifies the amounts distributed during a calendar year to a person from a retirement compensation arrangement (RCA), as a beneficiary of the RCA or if they sold an interest in it. The slip also shows the income tax that was deducted from the amounts distributed to the a person.</p>
 			<p>You can get a Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/t4a-rca.html">T4A-RCA</a> in a PDF or PDF fillable/saveable format to file on paper. </p>
 				 </div>
 			 <div class="col-sm-5">
@@ -268,7 +268,7 @@
 </details>
 
 <details><summary>Box 18 &ndash; Selling price of an interest in the RCA</summary>
-<p>Report the amount you paid to the recipient for the interest in the RCA (the purchase recipient price before you withheld 50% tax) if you bought an interest in the RCA.</p>
+<p>Report the amount you paid to the recipient for their interest in the RCA (the purchase recipient price before you withheld 50% tax) if you bought an interest in the RCA.</p>
 </details>
 
 <details><summary>Box 20 &ndash; Other amounts </summary>
