--- a/payroll/register/register.html
+++ b/payroll/register/register.html
@@ -93,14 +93,15 @@
 
 
 
- <p>You can register:</p>
-<ul class="list-inline">
-<li class="mrgn-rght-md"><span class="fas fa-laptop text-muted"></span> Online</li>
-<li class="mrgn-rght-md"><span class="fas fa-envelope text-muted"></span> By mail</li>
-<li class="mrgn-rght-md"><span class="fas fa-fax text-muted"></span> By fax</li>
-<li><span class="fas fa-phone text-muted"></span> By telephone<li>
- </ul>
-<p>Learn more: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program accounts</a></p>
+<p>You can register for a payroll account using different methods.  </p>
+
+<h3><span class="fas fa-laptop text-muted"></span> Online</h3>
+ <p>Where possible, you should use the Business Registration Online. This is the quickest way to register and avoid delays that may occur in processing paper requests. </p>
+
+    <p><a class="btn btn-primary mrgn-bttm-sm" href="https://ams-sga.cra-arc.gc.ca/gol-ged/awsc/amss/entry?target=login&amp;lang=en&amp;program=bro">Register now using BRO<br></a></p>
+
+<h3>Other methods</h3>
+<p>Learn more about other methods to register: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program accounts</a></p>
 
 <nav class="mrgn-bttm-lg mrgn-tp-lg">
   <h3 class="wb-inv">Document navigation</h3>
