--- a/payroll/register/register.html
+++ b/payroll/register/register.html
@@ -96,9 +96,17 @@
 <p>You can register for a payroll account using different methods.  </p>
 
 <h3><span class="fas fa-laptop text-muted"></span> Online</h3>
- <p>Where possible, you should use the Business Registration Online. This is the quickest way to register and avoid delays that may occur in processing paper requests. </p>
+ <p>Where possible, you should use the CRA online services to register for a payroll account. This is the quickest way to register and avoid delays that may occur in processing paper requests.</p>
 
-    <p><a class="btn btn-primary mrgn-bttm-sm" href="https://ams-sga.cra-arc.gc.ca/gol-ged/awsc/amss/entry?target=login&amp;lang=en&amp;program=bro">Register now using BRO<br></a></p>
+ <p>Register using one of the following online services if you are:</p>
+
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm ">
+<li class="cnjnctn-col"><h4>Canadian resident business</h4>
+  <p><a class="btn btn-primary mrgn-bttm-sm" href="https://ams-sga.cra-arc.gc.ca/gol-ged/awsc/amss/entry?target=login&amp;lang=en&amp;program=bro">Register now using <abbr title="Business Registration Online">BRO</abbr><br></a></p> </li>
+<li class="cnjnctn-col"><h4>Non-resident business</h4>
+  <p><a class="btn btn-primary mrgn-bttm-sm" href="https://apps.cra-arc.gc.ca/ebci/uisp/nonres/prot/ntr.action?request_locale=en_CA">Register now using <abbr title="Non-Resident Business Number and Account Registration">NRPNAR</abbr><br></a></p> </li>
+</ul>
+
 
 <h3>Other methods</h3>
 <p>Learn more about other methods to register: <a href="https://www.canada.ca/en/revenue-agency/services/tax/businesses/topics/registering-your-business/register.html">How to register for a business number or CRA program accounts</a></p>
