--- a/payroll/register/register.html
+++ b/payroll/register/register.html
@@ -20,13 +20,15 @@
          <script type="text/javascript" src="https://www.canada.ca/etc/designs/canada/cdts/gcweb/v4_0_43/cdts/compiled/wet-en.js"></script>
          <link href="https://test.canada.ca/covid-19-guidance/proto/css/alpha-beta-banner.css" rel="stylesheet">
          <link href="https://cra-arc.gc.ca/wet-boew/css/custom/steps.css" rel="stylesheet">
+         <link href="https://www.canada.ca/etc/designs/canada/wet-boew/m%C3%A9li-m%C3%A9lo/2023-10-mount-revelstoke.min.css" rel="stylesheet">
+         <link href="https://cra-arc.gc.ca/wet-boew/css/custom/noline-css.css" rel="stylesheet">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
          <!-- Write closure template -->
          <script type="text/javascript">
             document.write(wet.builder.refTop({
             }));
          </script>
-      </head>
+  </head>
       <body vocab="http://schema.org/" typeof="WebPage" class="experimental">
          <div id="def-top">
          </div>
@@ -100,10 +102,10 @@
 
  <p>Register using one of the following online services if you are:</p>
 
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm ">
-<li class="cnjnctn-col"><h4>Canadian resident business</h4>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+<li class="cnjnctn-col"><h4 class="text-muted">Canadian resident business</h4>
   <p><a class="btn btn-primary mrgn-bttm-sm" href="https://ams-sga.cra-arc.gc.ca/gol-ged/awsc/amss/entry?target=login&amp;lang=en&amp;program=bro">Register now using <abbr title="Business Registration Online">BRO</abbr><br></a></p> </li>
-<li class="cnjnctn-col"><h4>Non-resident business</h4>
+<li class="cnjnctn-col"><h4 class="text-muted">Non-resident business</h4>
   <p><a class="btn btn-primary mrgn-bttm-sm" href="https://apps.cra-arc.gc.ca/ebci/uisp/nonres/prot/ntr.action?request_locale=en_CA">Register now using <abbr title="Non-Resident Business Number and Account Registration">NRPNAR</abbr><br></a></p> </li>
 </ul>
 
