--- a/payroll/guidance/factors-psb.html
+++ b/payroll/guidance/factors-psb.html
@@ -96,11 +96,12 @@
 
 <h2 class="h3">On this page:</h2>
 <ul>
-<li><a href="#h_1">Determine if the worker is an incorporated employee</a></li>
+<li><a href="#h_0">Before you determine if the worker is an incorporated employee</a></li>
+<li><a href="#h_1">Answer a few questions to check if the worker is an incorporated employee</a></li>
 <li><a href="#h_2">References</a></li>
 </ul>
 
-<h2 id="h_1">Determine if the worker is an incorporated employee</h2>
+<h2 id="h_0">Before you determine if the worker is an incorporated employee</h2>
  
 <p>Before you determine if the worker is an incorporated employee, make sure a <a href="#ajax-contract" aria-controls="ajax-contract" class="overlay-lnk" role="button">valid contract <span class="far fa-question-circle"></span></a> was formed.</p>
 
@@ -111,7 +112,7 @@
     <h3 class="h4 mrgn-tp-0">This content does not replace the law</h3>
     <p>This content does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement</strong>.</p>
   </div>
-<h3>Answer a few questions to check if the worker is an incorporated employee</h3>
+<h2 id="h_1">Answer a few questions to check if the worker is an incorporated employee</h2>
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
 <div id="interactive"> 
 <div class="wb-frmvld gc-font-2019">  <form>
