--- a/guides/alberta/general-income-tax-benefit-package.html
+++ b/guides/alberta/general-income-tax-benefit-package.html
@@ -132,7 +132,7 @@
                             <summary>If you were a non-resident or a deemed resident of Canada</summary>
                             <p>Use the&nbsp;<a href="/content/canadasite/en/revenue-agency/services/forms-publications/tax-packages-years/general-income-tax-benefit-package/non-residents.html">Income tax package for non-residents and deemed residents of Canada</a>&nbsp;if you were a <strong>non-resident</strong> or&nbsp;<strong>deemed resident</strong> of Canada in 2022.</p>
                         </details>
-                        <details>
+                        <details class="mrgn-tp-md">
                             <summary>If your business income was from outside the province or territory you reside in, from outside Canada, or from multiple provinces</summary>
                             <p>Use <a href="/content/canadasite/en/revenue-agency/services/forms-publications/forms/t2203.html" style="background-color: rgb(255, 255, 255);">Form T2203, Provincial and Territorial Taxes for Multiple Jurisdictions</a> to calculate your provincial and territorial taxes if one of the following situations applies to you:</p>
                             <ul>
