--- a/guides/alberta/alberta.html
+++ b/guides/alberta/alberta.html
@@ -90,13 +90,13 @@ Alberta - 2022 Income tax package</h1>
 					<h4 class="mrgn-tp-sm text-muted">Alberta tax</h4>
 					<ul class="list-unstyled">
 						<li class="mrgn-bttm-md"><a href="https://www.canada.ca/en/revenue-agency/dev-tax-training-do-not-publish/matt/tax-packages-years/general-income-tax-benefit-package/alberta/5009-c.html">Form AB428 - Alberta Tax and Credits</a><br>
-							Use this form to calculate your provincial taxes and credits to report on your return</li>
+							Calculate the Alberta tax and credits to report on your return</li>
 						<li>Optional:
 							<ul class="lst-spcd">
 								<li><a href="/cra-arc/guides/alberta/alberta-tax-information.html">Alberta tax information</a><br>
-									Use this guide with the instructions on the return and schedules</li>
+									Find out what's new for residents of Alberta for 2022 and get help completing your Alberta tax and credits form</li>
 								<li> <a href="https://www.canada.ca/en/revenue-agency/dev-tax-training-do-not-publish/matt/tax-packages-years/general-income-tax-benefit-package/alberta/5009-d.html">Worksheet AB428 - Alberta</a><br>
-									Use this worksheet to calculate some of the amounts for your Alberta tax and credits</li>
+									Calculate some of the amounts to report on your Alberta tax and credits form</li>
 							</ul>
 						</li>
 					</ul>
