--- a/gcweb-proposals/gloabal-menu/index.html
+++ b/gcweb-proposals/gloabal-menu/index.html
@@ -24,13 +24,13 @@
     <link href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon">
     <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/theme.min.css">
     <!--Custom UCDG styles //-->
-    <link rel="stylesheet" href="../assets/css/ucdg-theme.css">
+    <link rel="stylesheet" href="assets/theme.css">
     <noscript>
         <link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/theme.min.css">
     </noscript>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <!--Custom UCDG script //-->
-    <script src="../assets/js/ucdg.js"></script>
+    <script src="assets/global-menu.js"></script>
 </head>
 
 <body vocab="http://schema.org/" typeof="WebPage">
@@ -63,7 +63,7 @@
     </header>
     <main property="mainContentOfPage">
         <h1 property="name" id="wb-cont" class="wb-inv">User-Centred Design Guide</h1>
-        <div class="provisional bg-cover" data-bgimg-srcset="../assets/images/banners/ucdg-index-1900.png 1900w, ../assets/images/banners/ucdg-index-1700.png 1700w, ../assets/images/banners/ucdg-index-1400.png 1400w, ../assets/images/banners/ucdg-index-991.png 991w">
+        <div class="provisional bg-cover" data-bgimg-srcset="assets/banner.png 1900w">
             <div class="container p-sm-3">
                 <div class="well col-md-8 bg-darker brdr-0 brdr-rds-0 text-white mrgn-tp-xl">
                     <div class="mrgn-lft-md mrgn-rght-md">
