--- a/gcweb-proposals/gloabal-menu/index.html
+++ b/gcweb-proposals/gloabal-menu/index.html
@@ -63,7 +63,7 @@
     </header>
     <main property="mainContentOfPage">
         <h1 property="name" id="wb-cont" class="wb-inv">User-Centred Design Guide</h1>
-        <div class="provisional bg-cover" data-bgimg-srcset="assets/banner.png 1900w">
+        <div class="provisional bg-cover" data-bgimg-srcset="assets/banner-1900.png 1900w">
             <div class="container p-sm-3">
                 <div class="well col-md-8 bg-darker brdr-0 brdr-rds-0 text-white mrgn-tp-xl">
                     <div class="mrgn-lft-md mrgn-rght-md">
