--- a/payroll/guidance/court-filter-500.html
+++ b/payroll/guidance/court-filter-500.html
@@ -90,9 +90,11 @@
 			
 			
              <section id="filteredEventsList" class="wb-tagfilter provisional">
+	
                <div class="row">
-                  <div class="col-sm-4">
-                     <h2 class="h3 mrgn-tp-0"><span class="fas fa-filter"></span> Filter</h2>
+                  <div class="col-md-4">
+				  <details class="provisional wb-details-close" open><summary><span class="fas fa-filter"></span> Filter</summary>
+                    
                      <div class="form-group">
                         <fieldset>
                            <label for="outcome">Outcome</label>
@@ -268,7 +270,9 @@
                               <option value="training-3">Hirer does not provide the worker with training</option>
                            </select>
                         </fieldset>
+						
                      </div>
+					 </details>
                   </div>
 
                    <div class="col-md-8 wb-tagfilter provisional wb-filter" id="filteredFAQ"  data-wb-filter='{
