--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -92,7 +92,7 @@
              <section id="filteredEventsList" class="wb-tagfilter provisional">
                <div class="row">
                   <div class="col-sm-4">
-                     <h2 class="h3 mrgn-tp-0"><span class="fas fa-filter"></span> Filter</h2>
+                     <details class="provisional wb-details-close" open><summary><span class="fas fa-filter"></span> Filter</summary>
                      <div class="form-group">
                         <fieldset>
                            <label for="outcome">Outcome</label>
@@ -269,6 +269,7 @@
                            </select>
                         </fieldset>
                      </div>
+					 </details>
                   </div>
 
                    <div class="col-md-8 wb-tagfilter provisional wb-filter" id="filteredFAQ"  data-wb-filter='{
