added padding to ex/hide

--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -92,7 +92,7 @@
              <section id="filteredEventsList" class="wb-tagfilter provisional">
                <div class="row">
                   <div class="col-sm-4">
-                     <details class="provisional wb-details-close" open><summary><span class="fas fa-filter"></span> Filter</summary>
+                     <details class="provisional wb-details-close mrgn-bttm-lg" open><summary><span class="fas fa-filter"></span> Filter</summary>
                      <div class="form-group">
                         <fieldset>
                            <label for="outcome">Outcome</label>
