--- a/payroll/guidance/court-filter-500.html
+++ b/payroll/guidance/court-filter-500.html
@@ -93,7 +93,7 @@
 	
                <div class="row">
                   <div class="col-md-4">
-				  <details class="provisional wb-details-close" open><summary><span class="fas fa-filter"></span> Filter</summary>
+				  <details class="provisional wb-details-close mrgn-bttm-lg" open><summary><span class="fas fa-filter"></span> Filter</summary>
                     
                      <div class="form-group">
                         <fieldset>
