--- a/payroll/guidance/court-filter.html
+++ b/payroll/guidance/court-filter.html
@@ -90,7 +90,7 @@
              <section id="filteredEventsList" class="wb-tagfilter provisional">
                <div class="row">
                   <div class="col-sm-4">
-                     <details class="provisional wb-details-close mrgn-bttm-lg" open><summary><span class="fas fa-filter"></span> Filter</summary>
+                     <details class="provisional wb-details-close mrgn-bttm-lg px-2" open><summary class="mrgn-lft-0 mrgn-rght-0"><span class="fas fa-filter"></span> Filter</summary>
                      <div class="form-group">
                         <fieldset>
                            <label for="outcome">Outcome</label>
@@ -259,7 +259,7 @@
                            </select>
                            <label for="training">Training
                            </label>
-                           <select id="training" name="training" class="full-width form-control wb-tagfilter-ctrl mrgn-bttm-md">
+                           <select id="training" name="training" class="full-width form-control wb-tagfilter-ctrl">
                               <option value="">All</option>
                               <option value="training-1">Hirer provides the worker with training</option>
                               <option value="training-2">The worker works in mobile locations</option>
