--- a/guides/alberta/general-income-tax-benefit-package.html
+++ b/guides/alberta/general-income-tax-benefit-package.html
@@ -104,7 +104,7 @@
         <p>You can get an income tax package (guide, return, forms and schedules) online or by mail. Certain tax situations may require a specific return or form.</p>
         <p>For tax filing information, go to&nbsp;<a href="/en/services/taxes/income-tax/personal-income-tax/get-ready-taxes.html">Get ready to do your taxes</a>.</p>
         <h2>Get a 2022 income tax package</h2>
-        <p>Find the income tax package for the province or territory where you <strong>resided on&nbsp;December 31, 2022</strong>.</p>
+        <p>Depending on where you resided on December 31, 2022, and where your business income came from, find the income tax package that is right for you.</p>
         <dl class="dl-horizontal">
             <dt>Online</dt>
             <dd>
